Afegida l'activitat del Ranking i acabada l'activitat de Log In.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="lowerButton">LOWER</string>
     <string name="correctAnswers">correct</string>
 
+    <string name="rankingTitle">HowPopular Ranking</string>
+    <string name="rankingEmpty">Not played yet</string>
+    <string name="rankingSeparator">-</string>
+    <string name="rankingPoints">points</string>
 </resources>
